--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,19 @@
-== README
+== Open-To-Do
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This app is meant to aid blocitoff as a To-Do list. This is the codebase for the open API
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+accessible from the command line.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Things to do for this app.
+
+
+As the Open To-do API, I want to return JSON representations of users, lists, and items
+
+As a user, authenticate myself from the command line, using a username and password
+
+As a user, create new users, lists, and items from the command line
+
+As a user, remove users and lists from the command line
+
+As a user, update list and item attributes from the command line	
