--- a/README.rdoc
+++ b/README.rdoc
@@ -8,7 +8,7 @@ accessible from the command line.
 Things to do for this app.
 
 
-As the Open To-do API, I want to return JSON representations of users, lists, and items
+As the Open To-do API, I want to return JSON representations of users, lists, and items (done)
 
 As a user, authenticate myself from the command line, using a username and password
 
@@ -16,4 +16,4 @@ As a user, create new users, lists, and items from the command line
 
 As a user, remove users and lists from the command line
 
-As a user, update list and item attributes from the command line	
+As a user, update list and item attributes from the command line
